--- a/src/main/resources/static/pages/manager.html
+++ b/src/main/resources/static/pages/manager.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta firstName="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Client Manager</title>
 </head>
@@ -14,8 +14,8 @@
         <div class="flex flex-col justify-center md:flex-row md:justify-between">
             <div class="w-11/12 mx-auto md:w-7/12">
                 <form class="flex flex-col mb-6">
-                    <label class="font-semibold mb-2 mt-4" for="name">First Name</label>
-                    <input class="border-solid border-2 border-gray-400 rounded-md mb-4" v-model="name" type="text" placeholder="Name (Required)">
+                    <label class="font-semibold mb-2 mt-4" for="firstName">First Name</label>
+                    <input class="border-solid border-2 border-gray-400 rounded-md mb-4" v-model="firstName" type="text" placeholder=" First Name (Required)">
                     <label class="font-semibold mb-2 mt-4" for="lastName">Last Name</label>
                     <input class="border-solid border-2 border-gray-400 rounded-md mb-4" v-model="lastName" type="text" placeholder="Last Name (Required)">
                     <label class="font-semibold mb-2 mt-4" for="email">Email</label>
@@ -24,13 +24,13 @@
                 </form>
                 <table class="border-solid border-2 border-gray-400 rounded-md w-full ">
                     <tr class="">
-                        <th class="text-start p-2">Name</th>
+                        <th class="text-start p-2">First Name</th>
                         <th class="text-start p-2">Last Name</th>
                         <th class="text-start p-2">Email</th>
                     </tr>
                     <template v-for="client in clients">
                         <tr class="bg-gray-100 hover:bg-blue-500 hover:text-white">
-                            <td class="px-2 py-2">{{client.name}}</td>
+                            <td class="px-2 py-2">{{client.firstName}}</td>
                             <td class="px-2 py-2">{{client.lastName}}</td>
                             <td class="px-2 py-2">{{client.email}}</td>
                         </tr>  
