Sprint 2 front-end completed

--- a/src/main/resources/static/web/accounts.html
+++ b/src/main/resources/static/web/accounts.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="../web/asstetsImg/Screenshot_2023-12-09_at_5.18.16_PM-removebg-preview.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" type="text/css" href="../web/assetsStyles/style.css">
-    <title>Your Accounts</title>
+    <title>Your Accounts | ANB</title>
 </head>
 <body>
     <div id="app">
