Sprint 3 completed, front-end details

--- a/src/main/resources/static/web/account.html
+++ b/src/main/resources/static/web/account.html
@@ -44,7 +44,7 @@
                         <th class="py-1 sm:px-2 lg:px-3 sm:text-left">Amount</th>
                     </tr>
                     <template v-for="transaction in account.transactions">
-                        <tr class="border-solid border-b-2  border-gray-400 w-full">
+                        <tr class="border-solid border-b-2 hover:bg-slate-200 border-gray-400 w-full">
                             <td v-if="transaction.type=='CREDIT'" class="py-1 px-3">
                                 <svg fill="#246b46" width="32px" height="32px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" stroke="#246b46">
 
