--- a/src/main/resources/static/web/accounts.html
+++ b/src/main/resources/static/web/accounts.html
@@ -123,8 +123,9 @@
                 </div>
             </div>
         </div>
-        <main class="flex flex-col lg:flex-row flex-wrap items-center min-h-[28rem] lg:min-h-[30rem] bg-[#E4F1FF]">
-            <h2 class="font-bold text-3xl text-slate-900 mt-3 lg:w-full lg:text-center lg:text-5xl">Your Products</h2>
+        <main class="flex flex-col lg:gap-8 lg:flex-row flex-wrap justify-center items-center min-h-[28rem] lg:min-h-[30rem] bg-[#E4F1FF]">
+            <h2 class="font-bold text-3xl text-blue-900 mt-3 lg:mt-14 lg:w-full lg:text-center lg:text-5xl">Your Products</h2>
+            <h3 class="font-semibold text-3xl lg:text-3xl text-blue-900 mt-3 lg:w-11/12 lg:text-left ">Accounts</h3>
             <template v-for="account in accounts">
                 <a :href="'../web/account.html?id=' + account.id" class="flex flex-col items-center p-2 w-11/12 lg:hover:scale-110 lg:w-5/12 my-3 gap-3 mx-auto bg-[url('../web/asstetsImg/card-bg.jpeg')] bg-cover bg-center rounded-lg">
                     <h2 class="font-semibold text-lg text-gray-200">Account Number: {{account.number}}</h2>
@@ -134,6 +135,21 @@
                     </div>
                     <h4 class="font-semibold text-lg text-gray-200">Creation Date: {{account.creationDate}}</h4>
                 </a>
+            </template>
+            <template v-if="loans.length == 0">
+                <a href="#" class="font-bold text-3xl text-slate-900 mt-3 lg:w-full lg:text-center lg:text-5xl">Would you like to apply for a loan?</a>
+            </template>
+            <template v-else>
+                <h2 class="font-semibold text-3xl lg:text-3xl text-blue-900 mt-3 lg:w-11/12 lg:text-left">Your Loans</h2>
+                <div class="flex flex-wrap gap-2 md:gap-4 w-full md:w-7/12 lg:justify-self-start lg:mb-6">
+                    <template v-for="loan in loans">
+                        <div class="flex flex-col items-center p-2 w-11/12 lg:hover:scale-110 lg:w-5/12 lg:py-4 my-3 gap-3 mx-auto bg-[#F5E8C7] shadow-md shadow-slate-400 rounded-lg">
+                            <h4 class="font-semibold text-lg text-slate-900">{{loan.name}}</h4>
+                            <p class="text-slate-600">Total Amount: <span class="font-bold text-lg text-slate-900">{{loan.amount.toLocaleString("en-US", {style:"currency", currency:"USD"})}}</span></p>
+                            <p class="text-slate-700"><span class="font-bold text-lg text-slate-900">{{loan.payments}}</span> Monthly Payments</p>
+                        </div>
+                    </template>
+                </div>    
             </template>
 
         </main>
