--- a/src/main/resources/static/web/accounts.html
+++ b/src/main/resources/static/web/accounts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../web/asstetsImg/Screenshot_2023-12-09_at_5.18.16_PM-removebg-preview.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" type="text/css" href="../web/assetsStyles/style.css">
+    <link rel="stylesheet" type="text/css" href="./assetsStyles/style.css">
     <title>Your Accounts | ANB</title>
 </head>
 <body>
@@ -63,7 +63,7 @@
             </div>   
         </header>
         <div class="hidden lg:flex lg:justify-between lg:px-8 lg:items-center lg:mt-6 lg:h-[14rem] lg:bg-[#004AAD]">
-            <h1 class="font-bold text-2xl text-gray-200 lg:text-4xl">Welcome, {{client.firstName}}</h1>
+            <h1 class=" font-bold text-2xl text-gray-200 lg:text-4xl">Welcome, {{client.firstName}}</h1>
             <div class="flex items-center justify-around gap-10 h-[4rem] ">
                 <div class="flex flex-col items-center">
                     <a href="#">
@@ -123,11 +123,11 @@
                 </div>
             </div>
         </div>
-        <main class="flex flex-col lg:gap-8 lg:flex-row flex-wrap justify-center items-center min-h-[28rem] lg:min-h-[30rem] bg-[#E4F1FF]">
+        <main class="flex flex-col lg:gap-8 lg:flex-row lg:px-10 flex-wrap justify-center items-center min-h-[28rem] lg:min-h-[30rem] bg-[#E4F1FF]">
             <h2 class="font-bold text-3xl text-blue-900 mt-3 lg:mt-14 lg:w-full lg:text-center lg:text-5xl">Your Products</h2>
             <h3 class="font-semibold text-3xl lg:text-3xl text-blue-900 mt-3 lg:w-11/12 lg:text-left ">Accounts</h3>
             <template v-for="account in accounts">
-                <a :href="'../web/account.html?id=' + account.id" class="flex flex-col items-center p-2 w-11/12 lg:hover:scale-110 lg:w-5/12 my-3 gap-3 mx-auto bg-[url('../web/asstetsImg/card-bg.jpeg')] bg-cover bg-center rounded-lg">
+                <a :href="'../web/account.html?id=' + account.id" class="flex flex-col items-center p-2 w-11/12 lg:hover:scale-110 lg:w-5/12 my-3 gap-3 mx-auto shadow-md shadow-slate-400 bg-[url('../web/asstetsImg/card-bg.jpeg')] bg-cover bg-center rounded-lg">
                     <h2 class="font-semibold text-lg text-gray-200">Account Number: {{account.number}}</h2>
                     <div>
                         <h3 class="font-semibold text-lg text-gray-200">Balance:</h3>
@@ -144,7 +144,7 @@
                 <div class="flex flex-wrap gap-2 md:gap-4 w-full md:w-7/12 lg:justify-self-start lg:mb-6">
                     <template v-for="loan in loans">
                         <div class="flex flex-col items-center p-2 w-11/12 lg:hover:scale-110 lg:w-5/12 lg:py-4 my-3 gap-3 mx-auto bg-[#F5E8C7] shadow-md shadow-slate-400 rounded-lg">
-                            <h4 class="font-semibold text-lg text-slate-900">{{loan.name}}</h4>
+                            <h4 class="font-semibold text-xl text-slate-900">{{loan.name}}</h4>
                             <p class="text-slate-600">Total Amount: <span class="font-bold text-lg text-slate-900">{{loan.amount.toLocaleString("en-US", {style:"currency", currency:"USD"})}}</span></p>
                             <p class="text-slate-700"><span class="font-bold text-lg text-slate-900">{{loan.payments}}</span> Monthly Payments</p>
                         </div>
