--- a/src/main/resources/static/web/account.html
+++ b/src/main/resources/static/web/account.html
@@ -42,7 +42,7 @@
                     <a href="./accounts.html" class="text-blue-900 mb-2 active:text-blue-900 text-md lg:text-lg justify-start"> &lt; Return</a>
                     <h1 class="font-semibold text-xl text-slate-900">Your Account</h1>
                     <h2 class="text-2xl text-slate-900">Account Number</h2>
-                    <p class="font-semibold text-blue-900">{{account.number}}</p>
+                    <p class="font-semibold text-3xl text-blue-900">{{account.number}}</p>
                 </div>
                 <template v-if="account.balance">
                     <div class="flex flex-col w-11/12 bg-white p-3 gap-2 shadow-md shadow-slate-400  md:px-10 md:py-6">
