--- a/src/main/resources/static/web/cards.html
+++ b/src/main/resources/static/web/cards.html
@@ -107,7 +107,7 @@
                         </div>
                       </div>
                 </div>
-                <div v-else="card.color=='TITANIUM'">
+                <div v-else-if="card.color=='TITANIUM'">
                     <div class="group my-4 h-80 sm:h-85 lg:h-96 w-8/12">
                         <div class="relative z-10 md:my-4 h-[250px] w-[315px] rounded-xl shadow-xl transition-all duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)] sm:h-[250px] sm:w-[400px]">
                           <div class="absolute inset-0 rounded-xl [backface-visibility:hidden]">
@@ -150,7 +150,52 @@
                                 </div>
                             </div>
                         </div>
-                      </div>
+                    </div>
+                </div>
+                <div v-else-if="card.color=='SILVER'">
+                    <div class="group my-4 h-80 sm:h-85 lg:h-96 w-8/12">
+                        <div class="relative z-10 md:my-4 h-[250px] w-[315px] rounded-xl shadow-xl transition-all duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)] sm:h-[250px] sm:w-[400px]">
+                          <div class="absolute inset-0 rounded-xl [backface-visibility:hidden]">
+                            <div class="h-full w-full rounded-xl object-cover shadow-xl bg-gradient-to-l from-zinc-400 via-stone-600 to-black [backface-visibility:hidden]">
+                               <h3 class="text-white uppercase top-[30px] left-[25px] relative w-5">{{card.type}}</h3>
+                               <svg class="z-20 absolute top-[30px] right-[25px]" width="40" height="40" viewbox="0 0 17.5 16.2">
+                                    <path d="M3.2 0l5.4 5.6L14.3 0l3.2 3v9L13 16.2V7.8l-4.4 4.1L4.5 8v8.2L0 12V3l3.2-3z" fill="white"></path>
+                               </svg>
+                                <img src="./asstetsImg/chip.png" alt="chip" class="absolute z-40 w-100 h-[45px] top-[80px] left-[24px]"> 
+                                 <svg class="z-40 absolute top-[83px] left-[100px]" viewBox="0 3.71 26.959 38.787" width="26.959" height="38.787" fill="white">
+                                    <path d="M19.709 3.719c.266.043.5.187.656.406 4.125 5.207 6.594 11.781 6.594 18.938 0 7.156-2.469 13.73-6.594 18.937-.195.336-.57.531-.957.492a.9946.9946 0 0 1-.851-.66c-.129-.367-.035-.777.246-1.051 3.855-4.867 6.156-11.023 6.156-17.718 0-6.696-2.301-12.852-6.156-17.719-.262-.317-.301-.762-.102-1.121.204-.36.602-.559 1.008-.504z"></path>
+                                    <path d="M13.74 7.563c.231.039.442.164.594.343 3.508 4.059 5.625 9.371 5.625 15.157 0 5.785-2.113 11.097-5.625 15.156-.363.422-1 .472-1.422.109-.422-.363-.472-1-.109-1.422 3.211-3.711 5.156-8.551 5.156-13.843 0-5.293-1.949-10.133-5.156-13.844-.27-.309-.324-.75-.141-1.114.188-.367.578-.582.985-.542h.093z"></path>
+                                    <path d="M7.584 11.438c.227.031.438.144.594.312 2.953 2.863 4.781 6.875 4.781 11.313 0 4.433-1.828 8.449-4.781 11.312-.398.387-1.035.383-1.422-.016-.387-.398-.383-1.035.016-1.421 2.582-2.504 4.187-5.993 4.187-9.875 0-3.883-1.605-7.372-4.187-9.875-.321-.282-.426-.739-.266-1.133.164-.395.559-.641.984-.617h.094zM1.178 15.531c.121.02.238.063.344.125 2.633 1.414 4.437 4.215 4.437 7.407 0 3.195-1.797 5.996-4.437 7.406-.492.258-1.102.07-1.36-.422-.257-.492-.07-1.102.422-1.359 2.012-1.075 3.375-3.176 3.375-5.625 0-2.446-1.371-4.551-3.375-5.625-.441-.204-.676-.692-.551-1.165.122-.468.567-.785 1.051-.742h.094z"></path>
+                                  </svg>
+                                  <div id="number" class="flex flex-row text-xl sm:text-2xl gap-2 sm:gap-6 text-white z-40 absolute top-[140px] left-[24px]">
+                                        <p>{{card.number.substring(0, 4)}}</p>
+                                        <p>{{card.number.substring(5, 9)}}</p>
+                                        <p>{{card.number.substring(10, 14)}}</p> 
+                                        <p>{{card.number.substring(15, 19)}}</p>
+                                  </div>
+                                  <h4 id="number" class="text-slate-300 text-[10px] absolute z-40 top-[175px] left-[24px]">GOOD TRHU: <span id="number" class="text-white text-base">{{card.thruDate.substring(5, 7)}}/{{card.thruDate.substring(2, 4)}}</span></h4>  
+                                  <h5 id="number" class="text-white text-base uppercase absolute z-40 top-[205px] left-[24px]">{{card.cardholder}}</h5>
+                                  <div v-if="card.type=='DEBIT'">
+                                        <img src="./asstetsImg/mc_symbol_opt_45_2x.png" alt="mastercard" class="absolute z-40 top-[195px] right-[25px] h-10">
+                                  </div>
+                                  <div v-else="card.type=='CREDIT'">
+                                        <img src="./asstetsImg/Visa_Brandmark_White_RGB_2021.png" alt="visa" class="absolute z-40 top-[205px] right-[25px] h-5">
+                                   </div>
+                                </div>
+                            </div>
+                            <div class="absolute inset-0 h-full w-full rounded-xl flex-col items-center justify-center bg-zinc-400 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]">
+                                <div class="absolute top-[30px] w-[100%] h-[50px] bg-black"></div>
+                                <h4 class="absolute text-slate-50 top-[80px] text-right w-[94%] px-2">cvv</h4>
+                                <div class="absolute top-[110px] left-[20px] h-[36px] w-[90%] px-3 m-0 items-center rounded-md justify-end bg-white">
+                                    <p class="text-black text-right pt-1">{{card.cvv}}</p>
+                                </div>
+                                <div class="absolute bottom-[30px] left-[18px] text-[10px] w-[94%] pl-3 pr-6"> 
+                                    <p>This card is property of Assurance National Bank, Wonderland. Misuse is criminal offence. If found, please return to the nearest Assurance National Bank.</p>
+                                    <p>Use of this card is subject to the credit card agreement.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                         
             </template>    
