--- a/src/main/resources/static/web/admin/manager.html
+++ b/src/main/resources/static/web/admin/manager.html
@@ -48,7 +48,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="../web/assetsScripts/manager.js"></script>
-    <script type="module" src="../web/assetsStyles/tailwind.config.js"></script>
+    <script src="manager.js"></script>
+    <script type="module" src="../assets/assetsStyles/tailwind.config.js"></script>
 </body>
 </html>
