--- a/src/main/resources/static/web/pages/login.html
+++ b/src/main/resources/static/web/pages/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../assets/asstetsImg/Screenshot_2023-12-09_at_5.18.16_PM-removebg-preview.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Log In | ANB</title>
 </head>
 <body>
@@ -15,13 +16,43 @@
         </a>
     </header>
     <main class="flex flex-col gap-2 items-center lg:flex-row flex-wrap lg:justify-around min-h-fit lg:min-h-[47rem]">
-        <div class="w-10/12 lg:w-8/12 py-6 items-center">
-            <div>
+        <div class="w-10/12 lg:w-8/12 py-6 items-center mt-5">
+            <div class="flex flex-col items-center border-b-2 gap-3 py-3 border-b-blue-900">
                 <h1 class="font-bold text-2xl lg:text-3xl text-blue-900">Log In To Your Online Bank Account</h1>
+                <form class="login-form" v-show="registered" @submit.prevent>
+                    <input type="text" placeholder="Username*" v-model="email" class="w-full my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
+                    invalid:border-pink-500 invalid:text-pink-600
+                    focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
+                    <input type="password" placeholder="Password*" v-model="password" class="w-full my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
+                    invalid:border-pink-500 invalid:text-pink-600
+                    focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
+                    <button href="../pages/accounts.html" @click="login()" class="w-full px-3 py-2 my-3 bg-blue-900 text-slate-300 rounded-md text-sm shadow-sm hover:text-white">Log In</button>
+                </form>
             </div>
         </div>
+        <div class="flex flex-col items-center gap-3 py-3 w-10/12 lg:w-8/12 ">
+            <h2 class="font-bold text-2xl lg:text-3xl text-blue-900/80">Don't have an account yet?</h2>
+            <form class="register-form" v-show="!registered" @submit.prevent class="w-6/12">
+                <input type="text" placeholder="First Name*" v-model="firstName" class="w-full my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
+                invalid:border-pink-500 invalid:text-pink-600
+                focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
+                <input type="text" placeholder="Last Name*" v-model="lastName" class="w-full my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
+                invalid:border-pink-500 invalid:text-pink-600
+                focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
+                <input type="email" placeholder="Email*" v-model="email" class="w-full px-3 py-2 my-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
+                invalid:border-pink-500 invalid:text-pink-600
+                focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
+                <input type="password" placeholder="Password*" v-model="password" class="w-full px-3 py-2 my-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
+                invalid:border-pink-500 invalid:text-pink-600
+                focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
+                <p class="text-slate-500 text-xs my-2">By clicking Register, you agree to our <a href="#" class="text-blue-900">Terms of Service</a> and <a href="#" class="text-blue-900">Privacy Policy</a>.</p>
+                <button @click="Register()" class="w-full px-3 py-2 my-3 bg-blue-900 text-slate-300 rounded-md text-sm shadow-sm hover:text-white">Register</button>
+                
+            </form>
+        </div>
+       
     </main>
-
+    <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="../assets/assetsScripts/login.js"></script>
