--- a/src/main/resources/static/web/pages/cards.html
+++ b/src/main/resources/static/web/pages/cards.html
@@ -9,8 +9,8 @@
     <title>Your Cards | ANB</title>
 </head>
 <body>
-    <header class="flex flex-col justify-around items-center lg:flex-row lg:justify-between z-10 h-[10rem] lg:h-[4rem] bg-[#004AAD] lg:fixed lg:w-full lg:top-0" id="header">
-        <a href="../../index.html"><img class="bg-cover justify-start pt-5 lg:pt-0 w-[10rem] sm:w-[15rem] lg:w-[10rem] lg:ml-5" src="../assets/asstetsImg/Screenshot%202023-12-09%20at%205.19.53%E2%80%AFPM.png" alt="logo"></a>
+    <header class="flex flex-col justify-around items-center lg:flex-row lg:justify-between z-10 h-[10rem] lg:h-[4rem] bg-[#004481] lg:fixed lg:w-full lg:top-0" id="header">
+        <a href="../../index.html"><img class="bg-cover justify-start pt-5 lg:pt-0 w-[10rem] sm:w-[15rem] lg:w-[10rem] lg:ml-5" src="../assets/asstetsImg/Logo with bg.png" alt="logo"></a>
         <div class="flex flex-wrap items-center lg:w-[14rem] lg:justify-around">
             <a href="#" class="hidden lg:flex">
                 <svg fill="#ffffff" width="32px" height="32px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" stroke-width="16.384">
@@ -57,9 +57,9 @@
         <main  class="flex flex-col items-center align-middle lg:flex-row flex-wrap lg:justify-around min-h-screen lg:min-h-[45rem] bg-[#E4F1FF]">
             <div class="flex flex-col gap-3 w-11/12 sm:7/12 my-2 lg:2/12 lg:mt-12"> 
                 <div class="flex justify-start w-3/12 lg:ml-7 xl:ml-20">
-                    <a href="accounts.html" class="text-blue-900 mb-2 active:text-blue-900 text-md lg:text-lg justify-start border-solid border-b-2 border-blue-900"> &lt; Return</a>
+                    <a href="accounts.html" class="text-[#004481] mb-2 active:text-[#004481] text-md lg:text-lg justify-start border-solid border-b-2 border-[#004481]"> &lt; Return</a>
                 </div>
-                <h1 class="font-bold text-3xl text-blue-900 lg:mt-7 w-full text-center lg:text-5xl">Cards</h1>
+                <h1 class="font-bold text-3xl text-[#004481] lg:mt-7 w-full text-center lg:text-5xl">Cards</h1>
             </div>
             <template v-for="card in cards">    
                 <div v-if="card.color=='GOLD'">
