--- a/src/main/resources/static/web/pages/account.html
+++ b/src/main/resources/static/web/pages/account.html
@@ -9,8 +9,8 @@
     <title>Account Details | ANB</title>
 </head>
 <body>
-    <header class="flex flex-col justify-around items-center lg:flex-row lg:justify-between z-10 h-[10rem] lg:h-[4rem] bg-[#004AAD] lg:fixed lg:w-full lg:top-0" id="header">
-        <a href="../../index.html"><img class="bg-cover justify-start pt-5 lg:pt-0 w-[10rem] sm:w-[15rem] lg:w-[10rem] lg:ml-5" src="../assets/asstetsImg/Screenshot%202023-12-09%20at%205.19.53%E2%80%AFPM.png" alt="logo"></a>
+    <header class="flex flex-col justify-around items-center lg:flex-row lg:justify-between z-10 h-[10rem] lg:h-[4rem] bg-[#004481] lg:fixed lg:w-full lg:top-0" id="header">
+        <a href="../../index.html"><img class="bg-cover justify-start pt-5 lg:pt-0 w-[10rem] sm:w-[15rem] lg:w-[10rem] lg:ml-5" src="../assets/asstetsImg/Logo with bg.png" alt="logo"></a>
         <div class="flex flex-wrap items-center lg:w-[14rem] lg:justify-around">
             <a href="#" class="hidden lg:flex">
                 <svg fill="#ffffff" width="32px" height="32px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" stroke-width="16.384">
@@ -58,16 +58,16 @@
             <div class="flex flex-col items-center gap-3 lg:w-5/12">
                 <div class="flex flex-col flex-wrap gap-3 w-10/12 my-2 border-solid border-b pb-3 border-slate-600"> 
                     <div class="flex justify-start w-3/12">
-                        <a href="accounts.html" class="text-blue-900 mb-2 active:text-blue-900 text-md lg:text-lg justify-start border-solid border-b-2 border-blue-900"> &lt; Return</a>
+                        <a href="accounts.html" class="text-[#004481] mb-2 active:text-blue-900 text-md lg:text-lg justify-start border-solid border-b-2 border-blue-900"> &lt; Return</a>
                     </div>
                     <h1 class="font-semibold text-xl text-slate-900">Your Account</h1>
                     <h2 class="text-2xl text-slate-900">Account Number</h2>
-                    <p class="font-semibold text-3xl text-blue-900">{{account.number}}</p>
+                    <p class="font-semibold text-3xl text-[#004481]">{{account.number}}</p>
                 </div>
                 <template v-if="account.balance">
                     <div class="flex flex-col w-11/12 bg-white p-3 gap-2 shadow-md shadow-slate-400  md:px-10 md:py-6">
                         <h3 class="font-semibold text-slate-500">Balance</h3>
-                        <p class="text-blue-900 font-semibold text-xl">{{account.balance.toLocaleString('en-US', { style: 'currency', currency: 'USD' })}}</p>
+                        <p class="text-[#004481] font-semibold text-xl">{{account.balance.toLocaleString('en-US', { style: 'currency', currency: 'USD' })}}</p>
                         <div class="flex flex-wrap justify-between gap-1">
                             <h4 class="text-slate-500">Location</h4>
                             <p class="text-slate-500 font-semibold">718 West 34th Street, New York, NY 10035</p>
@@ -76,7 +76,7 @@
                 </template> 
             </div>
             <div class="w-11/12 sm:w-10/12 lg:w-5/12 flex flex-col mb-5 gap-2"> 
-                <h3 class="text-xl mt-2 mb-1 font-bold text-blue-900">Your Transactions</h3> 
+                <h3 class="text-xl mt-2 mb-1 font-bold text-[#004481]">Your Transactions</h3> 
                 <table class="border-solid border-b-2  border-gray-400">
                     <tr class="border-solid border-b-2  border-gray-400">
                         <th class="py-1 sm:px-2 lg:px-3 sm:text-left">Type</th>
