--- a/src/main/resources/static/web/pages/accounts.html
+++ b/src/main/resources/static/web/pages/accounts.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div id="app">
-        <header class="flex flex-col justify-around items-center lg:flex-row lg:justify-between z-10 h-[10rem] lg:h-[4rem] bg-[#004AAD] lg:fixed lg:w-full lg:top-0" id="header">
-            <a href="../../index.html"><img class="bg-cover justify-start pt-5 lg:pt-0 w-[10rem] sm:w-[15rem] lg:w-[10rem] lg:ml-5" src="../assets/asstetsImg/Screenshot%202023-12-09%20at%205.19.53%E2%80%AFPM.png" alt="logo"></a>
+        <header class="flex flex-col justify-around items-center lg:flex-row lg:justify-between z-10 h-[10rem] lg:h-[4rem] bg-[#004481] lg:fixed lg:w-full lg:top-0" id="header">
+            <a href="../../index.html"><img class="bg-cover justify-start pt-5 lg:pt-0 w-[10rem] sm:w-[15rem] lg:w-[10rem] lg:ml-5" src="../assets/asstetsImg/Logo with bg.png" alt="logo"></a>
             <div class="flex flex-wrap items-center lg:w-[14rem] lg:justify-around">
                 <a href="#" class="hidden lg:flex">
                     <svg fill="#ffffff" width="32px" height="32px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" stroke-width="16.384">
@@ -81,7 +81,7 @@
                 </div> 
             </div>   
         </header>
-        <div class="hidden lg:flex lg:justify-between lg:px-8 lg:items-center lg:mt-6 lg:h-[14rem] lg:bg-[#004AAD]">
+        <div class="hidden lg:flex lg:justify-between lg:px-8 lg:items-center lg:mt-6 lg:h-[14rem] lg:bg-[#004481]">
             <h1 class=" font-bold text-2xl text-gray-200 lg:text-4xl">Welcome, {{client.firstName}}</h1>
             <div class="flex items-center justify-around gap-10 h-[4rem] ">
                 <div class="flex flex-col items-center">
@@ -143,8 +143,8 @@
             </div>
         </div>
         <main class="flex flex-col lg:gap-8 lg:flex-row lg:px-10 flex-wrap justify-center items-center min-h-[28rem] lg:min-h-[30rem] bg-[#E4F1FF]">
-            <h2 class="font-bold text-3xl text-blue-900 mt-3 lg:mt-14 lg:w-full lg:text-center lg:text-6xl">Your Products</h2>
-            <h3 class="font-semibold text-3xl lg:text-3xl text-blue-900 mt-5 lg:w-11/12 lg:text-left ">Accounts</h3>
+            <h2 class="font-bold text-3xl text-[#004481] mt-3 lg:mt-14 lg:w-full lg:text-center lg:text-6xl">Your Products</h2>
+            <h3 class="font-semibold text-3xl lg:text-3xl text-[#004481] mt-5 lg:w-11/12 lg:text-left ">Accounts</h3>
             <template v-for="account in accounts">
                 <a :href="'../web/account.html?id=' + account.id" class="flex flex-col items-center lg:py-4 lg:items-start lg:px-10 p-2 w-11/12 lg:hover:scale-110 lg:w-5/12 my-3 gap-3 lg:-mt-1 mx-auto shadow-md shadow-slate-400 bg-gradient-to-r from-teal-200 to-lime-200 bg-cover bg-center rounded-lg">
                     <h2 class="font-medium text-lg text-slate-800">Account Number: <span class="text-blue-950 font-bold text-xl">{{account.number}}</span></h2>
@@ -159,7 +159,7 @@
                 <a href="#" class="font-bold text-3xl text-slate-900 mt-3 lg:w-full lg:text-center lg:text-4xl">Would you like to apply for a loan?</a>
             </template>
             <template v-else>
-                <h2 class="font-semibold text-3xl lg:text-3xl text-blue-900 mt-3 lg:w-11/12 lg:text-left">Loans</h2>
+                <h2 class="font-semibold text-3xl lg:text-3xl text-[#004481] mt-3 lg:w-11/12 lg:text-left">Loans</h2>
                 <div class="flex flex-wrap justify-center lg:justify-start lg:mx-10 xl:mx-12 lg:gap-10 w-full lg:mb-6">
                     <template v-for="loan in loans">
                         <div class="flex flex-col items-center p-2 w-11/12 lg:hover:scale-110 lg:w-[18rem] lg:py-4 my-3 lg:-mt-1 gap-3 bg-gradient-to-l from-orange-200 to-rose-200 shadow-md shadow-slate-400 rounded-lg">
@@ -189,7 +189,7 @@
                             
                             </svg>
                     </a>
-                    <p class="text-xs text-blue-900">Accounts</p>
+                    <p class="text-xs text-[#004481]">Accounts</p>
                 </div>
                 <div class="flex flex-col items-center">
                     <a href="cards.html">
