Front-end details

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,8 +31,12 @@
                 <a href="../index.html">
                     <img class="bg-cover justify-start lg:pt-0 w-[8rem] md:w-[10rem] lg:w-[11rem]" src="./web/assets/asstetsImg/Logo with bg.png" alt="logo">
                 </a>
+                <div class="hidded lg:flex gap-8">
+                    <a href="#" class="hidden lg:flex text-white text-xl px-1 border-b-8 bottom-0 pb-3">Retail</a>
+                    <a href="#" class="hidden lg:flex text-white text-xl px-3">Business</a>
+                </div>
                 <div class="lg:flex lg:gap-10">
-                    <a href="./web/pages/login.html" class="hidden group lg:flex flex-col lg:justify-center lg:bg-teal-600 lg:px-4  lg:text-white">Access</a>
+                    <a href="./web/pages/login.html" class="hidden group lg:flex flex-col lg:justify-center lg:bg-teal-600 lg:px-6  lg:text-white">Access</a>
                     <ul class="nav-menu">
                         <li class="nav-item border-t-2 border-t-[#A5D6FF]">
                             <a href="./web/pages/login.html" class="nav-link">Login/Register</a>
