--- a/src/main/resources/static/web/pages/login.html
+++ b/src/main/resources/static/web/pages/login.html
@@ -19,7 +19,7 @@
     <main class="flex flex-col gap-2 items-center lg:flex-row flex-wrap lg:justify-around min-h-fit lg:min-h-[40rem]">
         <div class="w-10/12 lg:w-8/12 py-6 lg:gap-8 items-center mt-5 flex flex-col lg:flex-row lg:justify-around ">
             <div class="flex flex-col lg:w-6/12 items-center border-b-2 gap-3 py-3 lg:pr-8 border-b-[#004481] lg:border-r-2 lg:border-r-[#004481] lg:border-b-0">
-                <h1 class="font-bold text-2xl lg:text-3xl text-[#004481]">Log In To Your Online Bank Account</h1>
+                <h1 class="font-bold text-2xl lg:text-3xl text-[#004481] lg:text-start">Log In To Your Online Bank Account</h1>
                 <form class="login-form" v-show="!registered" @submit.prevent>
                     <input type="text" placeholder="Username*" v-model="email" class="w-full my-2 px-3 py-2 lg:my-4 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
                     invalid:border-pink-500 invalid:text-pink-600
@@ -30,7 +30,7 @@
                     <button href="../pages/accounts.html" @click="login()" class="w-full px-3 py-2 my-3 lg:mt-8 bg-[#004481] text-slate-300 rounded-md text-sm shadow-sm hover:text-white">Log In</button>
                 </form>
             </div>
-            <div class="flex flex-col items-center gap-3 py-3 w-full lg:w-5/12 grow-0">
+            <div class="flex flex-col items-center gap-3 py-3 w-full sm:w-8/12 lg:w-5/12">
                 <h2 class="font-bold text-2xl lg:text-3xl text-[#004481]/80">Don't have an account yet?</h2>
                 <form class="register-form" v-show="!registered" @submit.prevent >
                     <input type="text" placeholder="First Name*" v-model="firstName" class="w-full my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
@@ -47,7 +47,9 @@
                     focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
                     <p class="text-slate-500 text-xs my-2">By clicking in "Register", you agree to our <a href="#" class="text-blue-900">Terms of Service</a> and <a href="#" class="text-blue-900">Privacy Policy</a>.</p>
                     <button @click="register()" class="w-full px-3 py-2 my-3 bg-[#004481]/60 text-slate-300 rounded-md text-sm shadow-sm hover:text-white hover:bg-[#004481]">Register</button>
-                    
+                    <div v-if="error">
+                        <p class="text-red-500 text-center text-md">*{{error}}</p>
+                    </div>
                 </form>
             </div>
         </div>
