--- a/src/main/resources/static/web/pages/login.html
+++ b/src/main/resources/static/web/pages/login.html
@@ -27,7 +27,7 @@
                     <input type="password" placeholder="Password*" v-model="password" class="w-full my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
                     invalid:border-pink-500 invalid:text-pink-600
                     focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
-                    <button href="../pages/accounts.html" @click="login()" class="w-full px-3 py-2 my-3 lg:mt-8 bg-[#004481] text-slate-300 rounded-md text-sm shadow-sm hover:text-white">Log In</button>
+                    <button href="../pages/accounts.html" @click="loginEvent()" class="w-full px-3 py-2 my-3 lg:mt-8 bg-[#004481] text-slate-300 rounded-md text-sm shadow-sm hover:text-white">Log In</button>
                 </form>
             </div>
             <div class="flex flex-col items-center gap-3 py-3 w-full sm:w-8/12 lg:w-5/12">
