--- a/src/main/resources/static/web/pages/login.html
+++ b/src/main/resources/static/web/pages/login.html
@@ -16,11 +16,11 @@
         </a>
     </header>
     <div id="app">
-    <main class="flex flex-col gap-2 items-center lg:flex-row flex-wrap lg:justify-around min-h-fit lg:min-h-[40rem]">
-        <div class="w-10/12 lg:w-8/12 py-6 lg:gap-8 items-center mt-5 flex flex-col lg:flex-row lg:justify-around ">
-            <div class="flex flex-col lg:w-6/12 items-center border-b-2 gap-3 py-3 lg:pr-8 border-b-[#004481] lg:border-r-2 lg:border-r-[#004481] lg:border-b-0">
+    <main class="flex flex-col gap-4 items-center lg:flex-row flex-wrap lg:justify-around min-h-fit lg:min-h-[40rem]">
+        <div class="w-10/12 gap-4 lg:w-8/12 py-6 lg:gap-8 items-center mt-5 flex flex-col lg:flex-row lg:justify-around ">
+            <div class="flex flex-col lg:w-6/12 items-center border-b-2 gap-3 py-4 pb-9 lg:pr-10 border-b-[#004481] lg:border-r-2 lg:border-r-[#004481] lg:border-b-0">
                 <h1 class="font-bold text-2xl lg:text-3xl text-[#004481] lg:text-start">Log In To Your Online Bank Account</h1>
-                <form class="login-form" v-show="!registered" @submit.prevent>
+                <form class="login-form" @submit.prevent>
                     <input type="text" placeholder="Username*" v-model="email" class="w-full my-2 px-3 py-2 lg:my-4 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
                     invalid:border-pink-500 invalid:text-pink-600
                     focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
@@ -32,17 +32,17 @@
             </div>
             <div class="flex flex-col items-center gap-3 py-3 w-full sm:w-8/12 lg:w-5/12">
                 <h2 class="font-bold text-2xl lg:text-3xl text-[#004481]/80">Don't have an account yet?</h2>
-                <form class="register-form" v-show="!registered" @submit.prevent >
+                <form class="register-form" @submit.prevent >
                     <input type="text" placeholder="First Name*" v-model="firstName" class="w-full my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
                     invalid:border-pink-500 invalid:text-pink-600
                     focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
                     <input type="text" placeholder="Last Name*" v-model="lastName" class="w-full my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
                     invalid:border-pink-500 invalid:text-pink-600
                     focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
-                    <input type="email" placeholder="Email*" v-model="email" class="w-full px-3 py-2 my-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
+                    <input type="email" placeholder="Email*" v-model="emailReg" class="w-full px-3 py-2 my-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
                     invalid:border-pink-500 invalid:text-pink-600
                     focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
-                    <input type="password" placeholder="Password*" v-model="password" class="w-full px-3 py-2 my-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
+                    <input type="password" placeholder="Password*" v-model="passwordReg" class="w-full px-3 py-2 my-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
                     invalid:border-pink-500 invalid:text-pink-600
                     focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
                     <p class="text-slate-500 text-xs my-2">By clicking in "Register", you agree to our <a href="#" class="text-blue-900">Terms of Service</a> and <a href="#" class="text-blue-900">Privacy Policy</a>.</p>
