Front-end create cards

--- a/src/main/resources/static/web/pages/cards.html
+++ b/src/main/resources/static/web/pages/cards.html
@@ -49,17 +49,20 @@
                     </g>
                     
                     </svg>
-                <p class=" lg:text-xl font-semibold text-gray-300 group-hover:text-white lg:mr-8" href="../index.html">Log Out</p>
+                <p class=" lg:text-xl font-semibold text-gray-300 group-hover:text-white lg:mr-8" @click="logOut()">Log Out</p>
             </a>
         </div>
     </header>
     <div id="app">
-        <main  class="flex flex-col items-center align-middle lg:flex-row flex-wrap lg:justify-around min-h-screen lg:min-h-[45rem] bg-[#E4F1FF]">
-            <div class="flex flex-col gap-3 w-11/12 sm:7/12 my-2 lg:2/12 lg:mt-12"> 
+        <main  class="flex flex-col items-center lg:flex-row flex-wrap lg:justify-around min-h-screen lg:min-h-[45rem] bg-[#E4F1FF]">
+            <div class="flex flex-col items-start gap-3 w-11/12 sm:7/12 my-2 lg:2/12 lg:-mt-40"> 
                 <div class="flex justify-start w-3/12 lg:ml-7 xl:ml-20">
-                    <a href="accounts.html" class="text-[#004481] mb-2 active:text-[#004481] text-md lg:text-lg justify-start border-solid border-b-2 border-[#004481]"> &lt; Return</a>
+                    <a href="./accounts.html" class="text-[#004481] mb-2 active:text-[#004481] text-md lg:text-lg justify-start border-solid border-b-2 border-[#004481]"> &lt; Return</a>
                 </div>
                 <h1 class="font-bold text-3xl text-[#004481] lg:mt-7 w-full text-center lg:text-5xl">Cards</h1>
+                <div class="flex justify-center mt-4 md:justify-start w-full">
+                    <button class="lg:ml-7 xl:ml-20 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" @click="createCard()">Create New Card</button>
+                </div>
             </div>
             <template v-for="card in cards">    
                 <div v-if="card.color=='GOLD'">
@@ -206,7 +209,7 @@
             </div>
             <div class="lg:hidden flex items-center justify-around bg-white h-[4rem] border-t border-slate-700 ">
                 <div class="flex flex-col items-center">
-                    <a href="accounts.html">
+                    <a href="./accounts.html">
                         <svg width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" id="Layer_1" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#263238" stroke="#263238" stroke-width="0.44800000000000006">
 
                             <g id="SVGRepo_bgCarrier" stroke-width="0"/>
